dataset1235/2025-2/610742602/users/2183191739/executions/906907063_3221148872.log
== SUBMISSION (2025-08-19 20:51:33)
-- CODE: 
print(40+35)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:51:22)
-- CODE: 
print(R$40+R$35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    print(R$40+R$35)
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    print(R$40+R$35)
           ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
